fixed spacing, YAY

--- a/frontend/apartmentality/src/App.css
+++ b/frontend/apartmentality/src/App.css
@@ -13,6 +13,8 @@
 
 .tabs button {
   margin: 50px;
+  margin-right: 100px;
+  margin-left: 100px;
   border: none;
   background: white;
   cursor: pointer;
